--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "oh-my-zsh/oh-my-zsh.symlink"]
 	path = oh-my-zsh/oh-my-zsh.symlink
 	url = https://github.com/kingpong/oh-my-zsh.git
+[submodule "vim/vim.symlink/bundle/vim-fugitive"]
+	path = vim/vim.symlink/bundle/vim-fugitive
+	url = git://github.com/tpope/vim-fugitive.git
