--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "vim/vim.symlink/bundle/vim-fugitive"]
 	path = vim/vim.symlink/bundle/vim-fugitive
 	url = git://github.com/tpope/vim-fugitive.git
+[submodule "vim/vim.symlink/bundle/vcl-vim-plugin"]
+	path = vim/vim.symlink/bundle/vcl-vim-plugin
+	url = https://github.com/smerrill/vcl-vim-plugin.git
+[submodule "vim/vim.symlink/bundle/vim-python-pep8-indent"]
+	path = vim/vim.symlink/bundle/vim-python-pep8-indent
+	url = https://github.com/hynek/vim-python-pep8-indent.git
