--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/kingpong/oh-my-zsh.git
 [submodule "vim/vim.symlink/bundle/vim-fugitive"]
 	path = vim/vim.symlink/bundle/vim-fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+	url = https://github.com/tpope/vim-fugitive.git
 [submodule "vim/vim.symlink/bundle/vcl-vim-plugin"]
 	path = vim/vim.symlink/bundle/vcl-vim-plugin
 	url = https://github.com/smerrill/vcl-vim-plugin.git
